@@ -5,6 +5,8 @@ Date: ???
     - Added information about the deleveler
     - Refactored mods. Energy is now checked every time. Default mod accepts table.
     - Adjusted power for inserters and beacons
+  Bug fixes:
+    - Fixed quality armor not visible on character
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.14
 Date: 2023-11-20
